--- a/css/app-comp/body-comp/main-body-comp/dashboard.css
+++ b/css/app-comp/body-comp/main-body-comp/dashboard.css
@@ -1,6 +1,6 @@
 .dashboard-sub-comp-wrapper {
     width: 100%;
-    height: 100%;
+    height: 98%;
     overflow: scroll;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -17,3 +17,14 @@
 .dashboard-sub-comp-wrapper::-webkit-scrollbar {
     display: none;
 }
+
+@media screen and (max-width: 670px){
+    .dashboard-sub-comp-wrapper {
+        height: 95%;
+    }
+}
+/* @media screen and (max-height: 655px) {
+    .sub-dash-box {
+        height: 350px;
+    }
+} */
