--- a/css/app-comp/body-comp/main-body-comp/right-side-comp/profile.css
+++ b/css/app-comp/body-comp/main-body-comp/right-side-comp/profile.css
@@ -6,3 +6,47 @@
     position: absolute;
     right: 0;
 }
+.min-profile-top {
+    width: 100%;
+    height: 25%;
+}
+.min-profile-bottom {
+    width: 100%;
+    height: 75%;
+    align-items: center;
+}
+
+.min-profile-photo {
+    width: 100px;
+    height: 100px;
+}
+.min-profile-name {
+    font-size: 25px;
+    padding: 10px;
+    margin-left: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+.setting-heading {
+    width: 90%;
+    font-size: 20px;
+    letter-spacing: 1.5px;
+    font-weight: 600;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.settings-options {
+    width: 90%;
+}
+.common-setting-button {
+    width: 100%;
+    border: none;
+    padding: 7px;
+    font-size: 18px;
+    border-radius: 10px;
+}
+.edit-profile-button {
+
+}
