--- a/css/app-comp/body-comp/main-body-comp/right-side-comp/settings.css
+++ b/css/app-comp/body-comp/main-body-comp/right-side-comp/settings.css
@@ -1,13 +1,3 @@
-.shadow-screen{
-    position: fixed;
-    top: 65px;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    border: 1px solid;
-}
-
 .settings-page {
     max-width: 450px;
     width: 100%;
@@ -16,9 +6,15 @@
     position: absolute;
     right: 0;
 }
-
-@media screen and (max-width: 500px) {
-    .shadow-screen {
-        bottom: 7%;
-    }
+.right-section-close-button {
+    cursor: pointer;
+    padding: 10px;
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.right-section-close-button:hover {
+    background-color: red;
+    color: white;
 }
