--- a/css/app-comp/body-comp/main-body-comp/project-comp/project-box.css
+++ b/css/app-comp/body-comp/main-body-comp/project-comp/project-box.css
@@ -11,7 +11,7 @@
     transition: 0.5s;
 }
 .top-box-detail:hover {
-    background-color: rgb(229, 233, 240);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 .top-box-detail:nth-child(even){
     cursor: pointer;
@@ -28,9 +28,7 @@
 .three-dot-label{
     cursor: pointer;
 }
-.three-dots-wrapper:hover {
-    background-color: rgb(235, 237, 239);
-}
+
 .three-dots{
     display: none;
 }
@@ -97,14 +95,7 @@
     background-color: white;
     position: absolute;
 }
-.person-image{
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.1);
-    /* background-image: url("/ProApp/assets/images/user.png"); */
-    background-size: cover;
-}
+
 .person-1{
     left: 25px;
 }
@@ -113,6 +104,9 @@
 }
 .person-3{
     left: 65px;
+}
+.person-4{
+    left: 85px;
 }
 .more-person{
     left: 85px;
