--- a/css/app-comp/body-comp/main-body-comp/projects.css
+++ b/css/app-comp/body-comp/main-body-comp/projects.css
@@ -1,10 +1,49 @@
-.project-box-wrapper {
-    width: 33%;
-    height: 95%;
-    justify-content: flex-start;
-    align-items: center;
+.projects-body {
+    overflow-x: scroll;
+    height: 100%;
     overflow: scroll;
+    justify-content: space-around;
 }
-.project-box-wrapper::-webkit-scrollbar {
+.projects-body::-webkit-scrollbar {
+    width: 5px;
     display: none;
+}
+.project-box-wrapper {
+    width: 24%;
+    min-width: 368px;
+    height: 95%;
+    margin: 10px 5px 5px 5px;
+    border-radius: 10px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px;
+}
+.inner-projects-box-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    align-items: center;
+}
+.inner-projects-box-wrapper::-webkit-scrollbar {
+    display: none;
+}
+.project-box-heading {
+    text-align: left;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+
+@media screen and (max-width: 1575px) {
+    .projects-body {
+        justify-content: flex-start;
+    }
+}
+@media screen and (max-width: 500px) {
+    .projects-body {
+        justify-content: center;
+    }
+    .project-box-wrapper {
+        min-width: 95%;
+    }
 }
