--- a/css/app-comp/body.css
+++ b/css/app-comp/body.css
@@ -2,13 +2,14 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 500px) {
 
     @media screen and (max-height: 915px) {
         .app-body {
-            height: 91%;
+            height: 93.5%;
         }   
     }
     @media screen and (max-height: 670px) {
@@ -19,6 +20,6 @@
 }
 @media screen and (max-height: 655px) {
     .app-body {
-        height: 90%;
+        height: 100%;
     }
 }
