--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,18 @@ html, body, #main-root {
 .flex-space-around-y {
     align-items: space-around;
 }
-
+.common-button {
+    padding: 5px 7px;
+    background-color: rgb(68,146,240);
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px; 
+    transition: 0.5s;
+}
+.common-button:active {
+    transform: scale(0.9);
+}
 .background-image-div {
     border-radius: 50%;
     background-size: cover;
